crates/rargs/tests/snapshots/test_scripts__impl-269.snap
---
source: crates/rargs/tests/test_scripts.rs
description: "[stdout] no-first-option-help-local.sh download --help"
expression: "String::from_utf8(match \"stdout\" {\n            \"stdout\" => output.stdout,\n            \"stderr\" => output.stderr,\n            _ => panic!(\"invalid stream\"),\n        }).unwrap_or_else(|e|\n        panic!(\"failed to execute the '{dst}' script with error: {e}\"))"
---
Download a file

[4mAlias:[0m d, down

[4mUsage:[0m
  download [OPTIONS] SOURCE [TARGET]
  download -h|--help

[4mExamples:[0m
  download download example.com
    Download a file from the internet
  download download example.com ./output -f
    Download a file from the internet and force save it to ./output

[4mArguments:[0m
  SOURCE
    URL to download from
    [@required]
  TARGET
    Target filename (default: same as source)

[4mOptions:[0m
  -f --force
    Overwrite existing files
  -v --verbose
    Verbose mode
  -h --help
    Print help

